<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <View
        style="@style/view_ver"
        android:layout_height="match_parent"
        android:background="@color/normal_text_color"
        android:layout_width="0.5dp"/>
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tv0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price0"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price1"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price2"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv3"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price3"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv4"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price4"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv5"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price5"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin4"
        android:text="@string/price6"
        android:textColor="@color/hint_color"
        android:gravity="center"
        android:textSize="@dimen/h_text"
        android:background="@drawable/press_bg"/>
    <View
        style="@style/view_ver"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/normal_text_color"/>
    </LinearLayout>
    <View
        style="@style/view_ver"
        android:layout_height="match_parent"
        android:background="@color/normal_text_color"
        android:layout_width="0.5dp"/>
</LinearLayout>