<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9"
            android:gravity="left|center_vertical"
            android:text="@string/phone_number"
            android:textSize="@dimen/sp15_text"
            android:textColor="#666666"
            android:layout_marginLeft="@dimen/margin1.5"/>
        <EditText
            android:id="@+id/phone_num_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/sp15_text"
            android:textColorHint="@color/hint_color"
            android:paddingLeft="5dp"
            android:hint="@string/input_phone_number"
            android:inputType="number"
            android:background="@null"
            android:textCursorDrawable="@null"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8" />
    </LinearLayout>

    <View style="@style/view_between"
          android:layout_height="0.5dp"
          android:layout_marginLeft="@dimen/margin1.5"
          android:layout_marginRight="@dimen/margin1.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9"
            android:gravity="left|center_vertical"
            android:text="图片验证码"
            android:textSize="@dimen/sp15_text"
            android:textColor="#666666"
            android:layout_marginLeft="@dimen/margin1.5"
            android:id="@+id/textView" />

        <EditText
            android:id="@+id/code_pic_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/sp15_text"
            android:textColorHint="@color/hint_color"
            android:paddingLeft="5dp"
            android:hint="请输入图片验证码"
            android:background="@null"
            android:textCursorDrawable="@null"/>
        <ImageView
            android:id="@+id/code_pic_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:layout_margin="@dimen/margin"/>
    </LinearLayout>

    <View style="@style/view_between"
          android:layout_height="0.5dp"
          android:layout_marginLeft="@dimen/margin1.5"
          android:layout_marginRight="@dimen/margin1.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.9"
            android:textSize="@dimen/sp15_text"
            android:textColor="#666666"
            android:text="@string/check_code"
            android:gravity="left|center_vertical"
            android:layout_marginLeft="@dimen/margin1.5"/>

        <EditText
            android:id="@+id/check_code_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:layout_marginLeft="1dp"
            android:textSize="@dimen/sp15_text"
            android:hint="@string/input_check_code"
            android:textColorHint="@color/hint_color"
            android:paddingLeft="5dp"
            android:inputType="number"
            android:background="@null"
            android:textCursorDrawable="@null"/>

        <Button
            android:id="@+id/check_code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/get_code_bg_selector"
            android:text="@string/get_check_code"
            android:layout_weight="1.8"
            android:textColor="@color/button_unselected_text_color"
            android:textSize="@dimen/sp14_text"
            android:gravity="center"
            android:layout_margin="@dimen/margin"
            android:layout_gravity="center_vertical"
            android:enabled="false"/>
    </LinearLayout>
    <View style="@style/view_between"
          android:layout_height="0.5dp"
          android:layout_marginLeft="@dimen/margin1.5"
          android:layout_marginRight="@dimen/margin1.5"/>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/button_bg_selector"
        android:layout_marginLeft="@dimen/margin3"
        android:layout_marginRight="@dimen/margin3"
        android:layout_marginTop="@dimen/margin4"
        android:text="@string/btn_login"
        android:textColor="@color/button_unselected_text_color"
        android:textSize="@dimen/button_text_size"
        android:enabled="false"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
        <LinearLayout
            android:id="@+id/ll_third"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <View style="@style/view_between"
                      android:layout_height="0.5dp"
                      android:layout_width="@dimen/margin4"
                      android:layout_gravity="center_vertical"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="第三方登录"
                    android:textColor="#999999"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="@dimen/margin2"
                    android:layout_marginLeft="@dimen/margin2"
                    android:textSize="@dimen/normal_text"/>
                <View style="@style/view_between"
                      android:layout_height="0.5dp"
                      android:layout_width="@dimen/margin4"
                      android:layout_gravity="center_vertical"/>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin2.5"
                android:layout_marginLeft="@dimen/margin8"
                android:layout_marginRight="@dimen/margin8"
                android:layout_marginBottom="@dimen/margin5">

                <ImageView
                    android:id="@+id/qq_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/qq_bg"/>
                <ImageView
                    android:id="@+id/weixin_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/weixin_bg"/>
                <ImageView
                    android:id="@+id/weibo_img"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@mipmap/weibo_bg"
                />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>